# solana-education

./: Cargo.toml  README.md
src/: lib.rs  main.rs  utils.rs
wallets/: wallet1.json  wallet2.json
