cargo-features = ["edition2021"]

[package]
name = "solana-education"
version = "0.1.0"
edition = "2021"
publish = false

include = ["wallet/",]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-client = "1.9.3"
solana-sdk = "1.9.3"
solana-program = "1.9.3"
serde = "1.0"
serde_json = "1.0"
borsh = "0.9"

